# ai-voice-assistant

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: download_models.py
src/voice_assistant/: __init__.py  __main__.py  prompts.py
src/voice_assistant/assistant/: __init__.py  agent.py
src/voice_assistant/core/: config.py  exceptions.py  logger.py
src/voice_assistant/llm/: __init__.py  base.py  openrouter.py
src/voice_assistant/stt/: __init__.py  base.py  vosk.py
src/voice_assistant/tts/: __init__.py  base.py  edge.py
src/voice_assistant/utils/: __init__.py  audio.py  text.py
