[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-assistant"
version = "0.1.0"
description = "Voice assistant with STT, LLM, and TTS"
requires-python = ">=3.9"
dependencies = [
    "pyaudio>=0.2.13",
    "vosk>=0.3.45",
    "edge-tts>=6.1.0",
    "pygame>=2.5.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
voice-assistant = "voice_assistant.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]